--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,11 @@
 FROM centos:7
-# Compilators and make tools
-RUN yum groupinstall -y Development tools
 # Install epel
 RUN yum install -y epel-release
+# Add sclo utility 
+RUN yum install -y centos-release-scl-rh
+# Compilators and make tools
+RUN yum groupinstall -y Development tools
 # Install CUnit of needed version
-RUN yum install -y CUnit
+RUN yum install -y CUnit-devel
 #
 RUN export LD_LIBRARY_PATH=/usr/local/custom/lib/
