--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,25 @@
-FROM centos:7
-# Install epel
-RUN yum install -y epel-release
-# Add sclo utility 
-RUN yum install -y centos-release-scl-rh
-# Compilators and make tools
-RUN yum groupinstall -y Development tools
-# Install CUnit of needed version
-RUN yum install -y CUnit-devel
-#
-RUN export LD_LIBRARY_PATH=/usr/local/custom/lib/
+FROM ubuntu:latest
+
+# 
+ENV DEBIAN_FRONTEND=noninteractive
+
+# 
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    gcc \
+    make \
+    git \
+    valgrind \
+    && rm -rf /var/lib/apt/lists/*
+
+# 
+WORKDIR /app
+
+# 
+COPY . .
+
+# 
+RUN make
+
+# Запуск тестов по умолчанию при запуске контейнера
+CMD ["make", "test"]
