--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,6 +11,8 @@ RUN apt-get update && apt-get install -y \
     make \
     git \
     valgrind \
+    libcunit1 \
+    libcunit1-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # 
